# amazon_q_match3

./: .gitignore  .pre-commit-config.yaml  README.md  TEST_SUMMARY.md  debug_game.py  logging_config.py  pyproject.toml  run_with_logging.py  test_short_game.py
.github/workflows/: pr-check.yml
src/amazon_q_match3/: __init__.py  game_menu.py  highscore_manager.py  match3_game.py
tests/: test_cascade_detection.py  test_game_edge_cases.py  test_highscore_manager.py  test_match3_game.py
