[project]
name = "amazon-q-match3"
version = "0.1.0"
description = "Match3 puzzle game created with Amazon Q Developer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py313"

# Exclude files/directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "RET", # flake8-return
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "N806",  # Variable in function should be lowercase (for pygame constants)
    "N803",  # Argument name should be lowercase (for pygame events)
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["amazon_q_match3"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Per-file ignore rules
"tests/*" = ["N802", "N803"]  # Allow uppercase function names in tests

[tool.ruff.format]
# Formatter configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
